--- a/RedisProject/pom.xml
+++ b/RedisProject/pom.xml
@@ -47,5 +47,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>2.0.7</version>
+    </dependency>
   </dependencies>
 </project>
